Checking in a workaround for scrollbar code bug 55334, this bug causes scrollbars to not show up in pages that are completely generated with document.write(). r=brendan@mozilla.org/nisheeth@netscape.com, sr=vidur@netscape.com