content/html/document/src/nsHTMLDocument.cpp
@@ -2186,9 +2186,67 @@ nsHTMLDocument::OpenCommon(nsIURI* aSourceURL)
       return result;
   }
 
+  // XXX This is a nasty workaround for a scrollbar code bug
+  // (http://bugzilla.mozilla.org/show_bug.cgi?id=55334).
+
+  // Hold on to our root element
+  nsCOMPtr<nsIContent> root(mRootContent);
+
+  if (root) {
+    PRInt32 count;
+    root->ChildCount(count);
+
+    // Remove all the children from the root.
+    while (--count >= 0) {
+      root->RemoveChildAt(count, PR_TRUE);
+    }
+
+    count = 0;
+
+    mRootContent->GetAttributeCount(count);
+
+    // Remove all attributes from the root element
+    while (--count >= 0) {
+      nsCOMPtr<nsIAtom> name, prefix;
+      PRInt32 nsid;
+
+      root->GetAttributeNameAt(count, nsid, *getter_AddRefs(name),
+                               *getter_AddRefs(prefix));
+
+      root->UnsetAttribute(nsid, name, PR_FALSE);
+    }
+
+    // Remove the root from the childlist
+    if (mChildren) {
+      mChildren->RemoveElement(root);
+    }
+
+    mRootContent = nsnull;
+  }
+
+  // Call Reset(), this will now do the full reset, except removing
+  // the root from the document, doing that confuses the scrollbar
+  // code in mozilla since the document in the root element and all
+  // the anonymous content (i.e. scrollbar elements) is set to
+  // null.
+
   result = Reset(channel, group);
   if (NS_FAILED(result))
     return result;
+
+  if (root) {
+    // Tear down the frames for the root element.
+    ContentRemoved(nsnull, root, 0);
+
+    // Put the root element back into the document, we don't notify
+    // the document about this insertion since the sink will do that
+    // for us, the sink will call InitialReflow() and that'll create
+    // frames for the root element and the scrollbars work as expected
+    // (since the document in the root element was never set to null)
+
+    mChildren->AppendElement(root);
+    mRootContent = root;
+  }
 
   result = nsComponentManager::CreateInstance(kCParserCID, nsnull, 
                                               NS_GET_IID(nsIParser), 
